--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/preact": "^4.1.3",
     "@astrojs/rss": "^4.0.14",
     "astro": "^5.16.6",
+    "astro-remote": "^0.3.4",
     "graphql-request": "^7.4.0",
     "preact": "^10.28.1"
   }
